--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@orbs-network/lokey": "^0.0.1",
+    "@rainbow-me/rainbowkit": "^2.2.2",
+    "@tanstack/react-query": "^5.64.1",
+    "ethers": "^6.13.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.22.9",
+    "wagmi": "^2.14.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
