--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "name": "@orbs-network/lokey",
-  "version": "0.0.1",
-  "description": "LoKey is a lightweight library that leverages web-native APIs, including WebAuthn and Subtle Crypto, to securely authenticate users and sign transactions. Private keys are stored within a secure enclave on the user's device, ensuring robust protection.",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "description": "LoKey is a lightweight library that leverages ethers.js to securely delegate a signer and sign messages without prompting the user for each siging operation.",
+  "main": "./dist/loKey.umd.js",
+  "module": "./dist/loKey.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/loKey.es.js",
+      "require": "./dist/loKey.umd.cjs"
+    }
+  },
   "files": [
     "dist"
   ],
-  "tsup": {
-    "entry": [
-      "src/index.ts"
-    ],
-    "minify": true,
-    "dts": true,
-    "clean": true,
-    "splitting": true,
-    "platform": "browser",
-    "format": [
-      "cjs",
-      "esm"
-    ]
-  },
   "scripts": {
-    "build": "tsup",
-    "watch": "tsup --watch"
+    "build": "vite build",
+    "watch": "vite build --watch"
   },
   "repository": {
     "type": "git",
@@ -47,8 +40,12 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
-    "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0"
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.11",
+    "vite-plugin-dts": "^4.5.0"
+  },
+  "dependencies": {
+    "ethers": "^6.13.5"
   }
 }
