--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/loKey.es.js",
-        "types": "./dist/loKey.es.d.ts"
+        "types": "./dist/loKey.es.d.ts",
+        "default": "./dist/loKey.es.js"
       },
       "require": "./dist/loKey.umd.cjs"
     }
